cleanup: Remove dead code from obsolete TODOs and fix warnings.
Bug: NA
Test: NA
Change-Id: Ibcf9582305c565d02d920276fa446c344065a9b6